Fix labels visibiltiy based on arc length.

--- a/components/Visualization/ForceDirectedGraph/styles.scss
+++ b/components/Visualization/ForceDirectedGraph/styles.scss
@@ -36,6 +36,7 @@
     }
 
     .input-slider {
+        cursor: pointer;
     }
 
     .force-directed-graph {
